fix(java-installer): verify embedded Windows helpers